Renamed management page link

--- a/src/main/resources/org/marvelution/jji/Messages.properties
+++ b/src/main/resources/org/marvelution/jji/Messages.properties
@@ -1,4 +1,4 @@
-manage.display.name=Jira Integration for Jenkins
+manage.display.name=Manage Jira Sites
 manage.description=Manage linked Jira Sites.
 site.not.found=Site not found, please refresh the page.
 site.get.url.failed=Error retrieving Jira url.
