JJI-785 - Initial work on manual syncing jobs and builds

--- a/src/main/resources/org/marvelution/jji/Messages.properties
+++ b/src/main/resources/org/marvelution/jji/Messages.properties
@@ -6,3 +6,4 @@ cause.triggered.through=Started by {0} through {1}
 deployment.build.marker=Deployment Build Marker
 maximum.length=Maximum length of {0} characters.
 no.whitespaces.allowed=No white spaces allowed.
+jira.sync=Sync with Jira
