--- a/src/main/resources/org/marvelution/jji/Messages.properties
+++ b/src/main/resources/org/marvelution/jji/Messages.properties
@@ -6,3 +6,7 @@ cause.triggered.through=Started by {0} through {1}
 deployment.build.marker=Deployment Build Marker
 maximum.length=Maximum length of {0} characters.
 no.whitespaces.allowed=No white spaces allowed.
+jira.sync=Sync with Jira
+triggered.sync.of=Triggered synchronization of {0}.
+unable.to.trigger.sync.of=Unable to trigger synchronization of {0}.
+no.sites.selected=No Jira sites to synchronize with.
