--- a/src/main/resources/org/marvelution/jji/Messages.properties
+++ b/src/main/resources/org/marvelution/jji/Messages.properties
@@ -10,3 +10,6 @@ jira.sync=Sync with Jira
 triggered.sync.of=Triggered synchronization of {0}.
 unable.to.trigger.sync.of=Unable to trigger synchronization of {0}.
 no.sites.selected=No Jira sites to synchronize with.
+
+site.tunnel.unsatisfied.link.error=Failed to connect to secure tunnel because of a system requirement issue, see Jenkins logs for details.
+site.tunnel.not.connected=An error occurred connecting to the secure tunnel, see Jenkins logs for details.
