JJI-727 - Multi Realm Support

--- a/src/main/resources/org/marvelution/jji/Messages.properties
+++ b/src/main/resources/org/marvelution/jji/Messages.properties
@@ -2,6 +2,7 @@ manage.display.name=Manage Jira Sites
 manage.description=Manage linked Jira Sites.
 site.not.found=Site not found, please refresh the page.
 site.get.url.failed=Error retrieving Jira url.
+site.unregister.failed=Error unregistering site with Jira.
 cause.triggered.through=Started by {0} through {1}
 deployment.build.marker=Deployment Build Marker
 maximum.length=Maximum length of {0} characters.
