Support triggering builds from Jira without an issue context

--- a/src/main/resources/org/marvelution/jji/Messages.properties
+++ b/src/main/resources/org/marvelution/jji/Messages.properties
@@ -4,6 +4,7 @@ site.not.found=Site not found, please refresh the page.
 site.get.url.failed=Error retrieving Jira url.
 site.unregister.failed=Error unregistering site with Jira.
 cause.triggered.through=Started by {0} through {1}
+cause.triggered.by=Started by {0}
 deployment.build.marker=Deployment Build Marker
 maximum.length=Maximum length of {0} characters.
 no.whitespaces.allowed=No white spaces allowed.
