Implemented an administrator monitor for Jira Sites

--- a/src/main/resources/org/marvelution/jji/Messages.properties
+++ b/src/main/resources/org/marvelution/jji/Messages.properties
@@ -12,6 +12,13 @@ jira.sync=Sync with Jira
 triggered.sync.of=Triggered synchronization of {0}.
 unable.to.trigger.sync.of=Unable to trigger synchronization of {0}.
 no.sites.selected=No Jira sites to synchronize with.
-
 site.tunnel.unsatisfied.link.error=Failed to connect to secure tunnel because of a system requirement issue, see Jenkins logs for details.
 site.tunnel.not.connected=An error occurred connecting to the secure tunnel, see Jenkins logs for details.
+site.not.up.to.date=The Jira app is not up to date, consider updating it to make sure you are not missing out on new features and \
+  critical fixes!
+site.check.failed=Failed to verify the integration with Jira, check the logs of Jenkins for details.
+site.license.issue=The integration is broken because of a missing or invalid License, check Jira and its apps to verify the required \
+  licenses are applied and valid.
+site.status.unknown=Unable to verify the integration status with Jira, check both Jira and Jenkins logs for details.
+site.up.and.ready=All good and ready to go!
+
